--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -13,6 +13,7 @@ compose.subject.forward = [\uC804\uB2EC] {0}
 compose.subject.reply   = [\uB2F5\uC7A5] {0}
 compose.urgent          = \uAE34\uAE09
 
+label.address      = \uC8FC\uC18C
 label.attach       = \uCCA8\uBD80
 label.bcc          = \uC228\uC740\uCC38\uC870
 label.cc           = \uCC38\uC870
@@ -26,6 +27,7 @@ label.status       = \uC0C1\uD0DC
 label.subject      = \uC81C\uBAA9
 label.to           = \uBC1B\uB294\uC774
 label.tosenddate   = \uBCF4\uB0BC\uB0A0\uC9DC
+label.type         = \uC885\uB958
 label.username     = \uC0AC\uC6A9\uC790
 
 main.folder.alreadyexist   = \uB3D9\uC77C\uD55C \uC774\uB984\uC758 \uD3B8\uC9C0\uD568\uC774 \uC774\uBBF8 \uC874\uC7AC\uD569\uB2C8\uB2E4.
@@ -71,6 +73,7 @@ menu.replyall       = \uC804\uCCB4\uB2F5\uC7A5
 menu.resend         = \uC7AC\uBC1C\uC1A1
 menu.reset          = \uC0C8\uB85C\uC785\uB825
 menu.restore        = \uBCF5\uAD6C
+menu.revoke         = \uD68C\uC218
 menu.save           = \uC800\uC7A5
 menu.savedraft      = \uC784\uC2DC\uC800\uC7A5
 menu.search         = \uAC80\uC0C9
