--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
@@ -4,6 +4,8 @@
 # http://www.zaval.org/products/jrc-editor/
 #
 
+field.required = \uD544\uC218 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+
 wma.composemessage.draft.failed            = \uC784\uC2DC \uC800\uC7A5\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.composemessage.failedattforward        = Failed to append attachments to forward message.
 wma.composemessage.failedcreation          = \uD3B8\uC9C0 \uAC1D\uCCB4 \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
