--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -13,6 +13,15 @@ compose.subject.forward = [\uC804\uB2EC] {0}
 compose.subject.reply   = [\uB2F5\uC7A5] {0}
 compose.urgent          = \uAE34\uAE09
 
+fetch.account             = \uC678\uBD80 \uBA54\uC77C
+fetch.account.autoempty   = \uAC00\uC838\uC628 \uD6C4 \uC11C\uBC84\uC5D0\uC11C \uBA54\uC77C \uC0AD\uC81C
+fetch.account.password    = \uBE44\uBC00\uBC88\uD638
+fetch.account.port        = \uD3EC\uD2B8\uBC88\uD638
+fetch.account.protocol    = \uD504\uB85C\uD1A0\uCF5C
+fetch.account.server.addr = \uC11C\uBC84\uC8FC\uC18C
+fetch.account.username    = \uC544\uC774\uB514
+fetch.account.usessl      = \uBCF4\uC548 \uC5F0\uACB0(SSL) \uC0AC\uC6A9
+
 label.address      = \uC8FC\uC18C
 label.attach       = \uCCA8\uBD80
 label.bcc          = \uC228\uC740\uCC38\uC870
@@ -46,6 +55,7 @@ menu.compose        = \uD3B8\uC9C0\uC791\uC131
 menu.copy           = \uBCF5\uC0AC
 menu.delete         = \uC0AD\uC81C
 menu.edit           = \uD3B8\uC9D1
+menu.fetch          = \uAC00\uC838\uC624\uAE30
 menu.filter.all     = \uC804\uCCB4
 menu.filter.flagged = \uD50C\uB798\uADF8 \uC124\uC815\uB41C \uD3B8\uC9C0
 menu.filter.recent  = \uC0C8\uD3B8\uC9C0
