git-svn-id: http://svn.code.sf.net/p/hwmail/code@113 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
@@ -16,14 +16,15 @@ wma.composemessage.setsendtdate.failed     = \uBCF4\uB0B8\uC2DC\uAC04 \uC124\uC8
 #Display message related
 wma.displaymessage.failedcreation          = \uD3B8\uC9C0 \uAC1D\uCCB4 \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.displaymessage.notmultipart            = \uCCA8\uBD80\uB098 \uC774\uBBF8\uC9C0\uAC00 \uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uBA54\uC2DC\uC9C0\uC785\uB2C8\uB2E4.
-wma.folder.deletemessage.failed            = Failed to delete a given message.
+wma.folder.appendmessage.failed            = \uBA54\uC2DC\uC9C0 \uCD94\uAC00\uC5D0 \uC0AD\uC81C\uD558\uC600\uC2B5\uB2C8\uB2E4.
+wma.folder.deletemessage.failed            = \uBA54\uC2DC\uC9C0 \uC0AD\uC81C\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.folder.displaymime.failed              = \uC6D0\uBCF8 \uBA54\uC2DC\uC9C0 \uCD9C\uB825 \uB3C4\uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 wma.folder.displaypart.failed              = \uCCA8\uBD80 \uD639\uC740 \uC774\uBBF8\uC9C0 \uCD9C\uB825 \uB3C4\uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4.
 wma.folder.failedcreation                  = \uD3B8\uC9C0\uD568 \uAC1D\uCCB4 \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.folder.flagmessages.failed             = \uD50C\uB798\uADF8 \uC124\uC815\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.folder.movemessage.destination.foul    = \uD3B8\uC9C0\uB97C \uC800\uC7A5\uD560 \uC218 \uC5C6\uB294 \uD3B8\uC9C0\uD568\uC785\uB2C8\uB2E4.
 wma.folder.movemessage.destination.missing = \uC774\uB3D9\uB420 \uBAA9\uC801\uC9C0 \uD3B8\uC9C0\uD568\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
-wma.folder.movemessage.failed              = Failed to move a given message.
+wma.folder.movemessage.failed              = \uBA54\uC2DC\uC9C0 \uC774\uB3D9\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.folder.wmamessage                      = Failed to come up with a wrapped message.
 #Message list related
 wma.messagelist.failedcreation             = \uD3B8\uC9C0 \uC815\uBCF4 \uBAA9\uB85D \uAC1D\uCCB4 \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
