--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -123,6 +123,7 @@ prefs.inboxtype               = \uCCAB \uD654\uBA74 \uD3B8\uC9C0\uD568
 prefs.nosignature             = \uC11C\uBA85 \uC548\uD568
 prefs.pagesize                = \uBAA9\uB85D \uAC1C\uC218
 prefs.personalfolder          = \uAC1C\uC778 \uD3B8\uC9C0\uD568
+prefs.publicfolder            = \uACF5\uC720 \uD3B8\uC9C0\uD568
 prefs.rootfolder              = Root
 prefs.sendas                  = \uBCF4\uB0B4\uB294 \uC0AC\uB78C \uC774\uB984
 prefs.sentmail                = \uBCF4\uB0B8 \uD3B8\uC9C0
