git-svn-id: http://svn.code.sf.net/p/hwmail/code@121 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -77,6 +77,7 @@ menu.open           = \uC5F4\uAE30
 menu.prev           = \uC774\uC804
 menu.purge          = \uC644\uC804\uC0AD\uC81C
 menu.rawmsg         = \uC6D0\uBCF8 \uBCF4\uAE30
+menu.rawmsg.import  = \uC6D0\uBCF8\uB4F1\uB85D...
 menu.read           = \uC77D\uC74C\uD45C\uC2DC
 menu.reply          = \uB2F5\uC7A5
 menu.replyall       = \uC804\uCCB4\uB2F5\uC7A5
