git-svn-id: http://svn.code.sf.net/p/hwmail/code@161 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages_ko.properties
@@ -35,7 +35,7 @@ wma.prefs.save                             = Failed to save preferences.
 wma.session.authentication                 = \uC11C\uBC84\uB85C\uBD80\uD130 \uC778\uC99D\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 #Session related errors
 wma.session.initmail                       = \uC11C\uBC84 \uC811\uC18D\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4. \uC7A0\uC2DC \uD6C4 \uB2E4\uC2DC \uC0AC\uC6A9\uD574 \uC8FC\uC2ED\uC2DC\uC624.
-wma.store.archivesentmail.failed           = \uBCF4\uB0B8 \uD3B8\uC9C0\uD568\uC5D0 \uC800\uC7A5\uD558\uB294 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
+wma.store.archivemail.failed               = \uBCF4\uB0B8 \uD3B8\uC9C0\uD568\uC5D0 \uC800\uC7A5\uD558\uB294 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.store.createfolder.exists              = \uB3D9\uC77C\uD55C \uC774\uB984\uC758 \uD3B8\uC9C0\uD568\uC774 \uC774\uBBF8 \uC874\uC7AC\uD569\uB2C8\uB2E4.
 wma.store.createfolder.failed              = \uD3B8\uC9C0\uD568 \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 wma.store.deletefolder.failed              = \uD3B8\uC9C0\uD568 \uC0AD\uC81C\uC5D0 \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
