--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -91,6 +91,7 @@ menu.search         = \uAC80\uC0C9
 menu.send           = \uBCF4\uB0B4\uAE30
 menu.settings       = \uD658\uACBD\uC124\uC815
 menu.unread         = \uC77D\uC9C0 \uC54A\uC740 \uC0C1\uD0DC\uB85C
+menu.upload.eml     = eml\uC5C5\uB85C\uB4DC
 
 message.confirm.delete = \uC120\uD0DD\uD55C \uD3B8\uC9C0\uB97C \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 message.defersend      = \uC608\uC57D\uBC1C\uC1A1
