--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -7,8 +7,8 @@
 
 compose.quote.html      = <br/><br/><br/>-----\uC6D0\uBCF8 \uBA54\uC2DC\uC9C0-----<br/><b>\uC1A1\uC2E0:</b> {0}<br/><b>\uB0A0\uC9DC:</b> {1}<br/><b>\uC218\uC2E0:</b> {2}<br/><b>\uC81C\uBAA9:</b> {3}<br/><br/>
 compose.quote.plain     = \n\n -----\uC6D0\uBCF8 \uBA54\uC2DC\uC9C0-----\n \uC1A1\uC2E0: {0}\n \uB0A0\uC9DC: {1}\n \uC218\uC2E0: {2}\n \uC81C\uBAA9: {3}
-compose.reserve.tosend  = \uC608\uC57D\uBC1C\uC1A1
 compose.secure          = \uBCF4\uC548
+compose.send.later      = \uC608\uC57D\uBC1C\uC1A1
 compose.subject.forward = [\uC804\uB2EC] {0}
 compose.subject.reply   = [\uB2F5\uC7A5] {0}
 compose.urgent          = \uAE34\uAE09
