--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent_ko.properties
@@ -59,12 +59,11 @@ menu.filter.flagged = \uD50C\uB798\uADF8 \uC124\uC815\uB41C \uD3B8\uC9C0
 menu.filter.recent  = \uC0C8\uD3B8\uC9C0
 menu.filter.unread  = \uC77D\uC9C0 \uC54A\uC740 \uD3B8\uC9C0
 menu.folder         = \uD3B8\uC9C0\uD568
-menu.folder.create  = \uC0C8 \uD3F4\uB354
-menu.folder.delete  = \uD3B8\uC9C0\uD568 \uC0AD\uC81C
+menu.folder.add     = \uC0C8 \uD3F4\uB354
 menu.folder.empty   = \uBE44\uC6B0\uAE30
 menu.folder.manage  = \uD3B8\uC9C0\uD568 \uAD00\uB9AC
-menu.folder.move    = \uD3B8\uC9C0\uD568 \uC774\uB3D9
-menu.folder.rename  = \uD3B8\uC9C0\uD568 \uC774\uB984 \uBCC0\uACBD
+menu.folder.remove  = \uC0AD\uC81C
+menu.folder.rename  = \uC774\uB984 \uBCC0\uACBD
 menu.forward        = \uC804\uB2EC
 menu.list           = \uBAA9\uB85D
 menu.login          = \uB85C\uADF8\uC778
